
v2.6.8   - Bug fixed lut creation on 32 and 128 sizes.  Previously, they would
	   get created and not cached.
v2.6.7   - Added installers for both platforms. The main benefit is
	   for Windows where shortcuts and an icon in Desktop are created.
v2.6.6.3 - Bug fixed pixel info display when mirror X or mirror Y are
           in effect.
         - Bug fixed color info, histogram and vectorscope when mirror
           X or Y are in effect.
         - Bug fixed data window display when mirror X or Y are in
           effect.
         - Bug fixed mirror X and mirror Y in stereo displays.
v2.6.6.2 - Bug fixed center and fit image when pixel ratio was different
	   than 1.
	 - Bug fixed mirror X and mirror Y when different data/display 
	   window is present.  Previously, the flipping was done within
	   the data window.
	 - Added back again the S and E buttons in the timeline to set
	   the start and ending of clips or the timeline.  The E button
	   works well, but the S button is subject to movies caches.
	 - Use ffmpeg's png loader when cache is off.  The loader is really
	   fast but requires opening of the file with the avi (ffmpeg) loader.
	   That means you cannot load the png sequence and then switch to the 
	   non-cache loader without reloading the sequence.

v2.6.6.1 - Reworked the Cache Preferences to allow:
	   * Not using any cache for streaming images directly from disk.
	     The performance of this is extremely dependant on the images being
	     loaded.
	   * 8 bit caches to save RAM at the expense of baking the gamma in.
	   * Scale to proxy images (one half, one quarter or one eighth of the
	     original size) also to save RAM.

v2.6.5.6 - Made caching work on all sequences in reels and timeline in EDL.
	   Progress goes from one sequence to the next.
	 - Removed reloading of movie files when they change in disk.
	   Previously the whole reel would get corrupted.
	 - Replaced zlib1.dll in win32 distribution as it was corrupt and