@@ -62,6 +62,10 @@ are&nbsp;just ASCII files, it becomes harder to misinterpret.<br>
 
 <br>
 
+As of January 2015, AMPAS ships ACES 1.0, which is a collection of
+CTL transforms and these are included in the mrViewer distribution.
+
+<br>
 
 
 
@@ -81,9 +85,8 @@ approximation of even the most complex transformations.<br>
 
 In addition to CTL, mrViewer also supports ICC, which is still pretty
 common with the print industry as well as some monitor manufacturers.
-&nbsp;In the future, it is likely that ICC support will be vanished
-and
-that an internal ICC to CTL converter will be provided instead.<br>
+&nbsp;In the future, it is likely that ICC support will be vanished.
+<br>
 <br><br>
 <br>
 
